Fix for layout issue

--- a/themes/nica/assets/style/layout/_footer.scss
+++ b/themes/nica/assets/style/layout/_footer.scss
@@ -44,6 +44,7 @@
   .navigation-item {
     list-style: none;
     padding: 0 1rem;
+    font-size: .85rem;
   }
 
   .navigation-link {
@@ -58,7 +59,7 @@
 
   .page-url-print,
   .copyright {
-    font-size: 0.8rem;
+    font-size: .85rem;
   }
 
   .page-url-print {
